--- a/src/player.fxml
+++ b/src/player.fxml
@@ -1,12 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
 <StackPane fx:id="stack" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlayerController">
    <children>
       <MediaView fx:id="mediaView" />
-      <BorderPane fx:id="border" onMouseClicked="#playPause" prefHeight="200.0" prefWidth="200.0" />
+      <BorderPane fx:id="border" onMouseClicked="#playPause" prefHeight="200.0" prefWidth="200.0">
+         <bottom>
+            <VBox prefHeight="74.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Slider fx:id="slider" />
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="btnPause" mnemonicParsing="false" onAction="#playPause" prefHeight="40.0" prefWidth="40.0">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="btnFullScreen" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </bottom>
+         <top>
+            <Button fx:id="btnBack" contentDisplay="TOP" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="&lt;-" BorderPane.alignment="TOP_LEFT">
+               <BorderPane.margin>
+                  <Insets left="10.0" top="10.0" />
+               </BorderPane.margin>
+            </Button>
+         </top></BorderPane>
    </children>
 </StackPane>
