--- a/src/player.fxml
+++ b/src/player.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,10 +17,33 @@
          <bottom>
             <VBox prefHeight="74.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                <children>
-                  <Slider fx:id="slider" />
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Label fx:id="lblCurrentTime" text="Label">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Slider fx:id="slider" focusTraversable="false" HBox.hgrow="ALWAYS" />
+                        <Label fx:id="lblMaxTime" text="Label">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                   <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                            <children>
                               <Button fx:id="btnPause" mnemonicParsing="false" onAction="#playPause" prefHeight="40.0" prefWidth="40.0">
                                  <HBox.margin>
