Created New Video Dialog for adding new videos and editing videos

--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,11 @@
     -fx-text-fill: white;
     -fx-cursor: hand;
 }
+
+.scroll-pane > .viewport {
+    -fx-background-color: transparent;
+}
+
+.text-field {
+    -fx-background-color: rgb(15, 15, 15);
+}
