--- a/src/main/resources/player.fxml
+++ b/src/main/resources/player.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -15,6 +16,7 @@
 <StackPane fx:id="stack" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlayerController">
    <children>
       <MediaView fx:id="mediaView" />
+      <ImageView fx:id="videoImageView" pickOnBounds="true" preserveRatio="true" />
       <BorderPane fx:id="border" onMouseClicked="#playPause" prefHeight="200.0" prefWidth="200.0">
          <bottom>
             <VBox prefHeight="74.0" prefWidth="800.0" BorderPane.alignment="CENTER">
@@ -41,7 +43,7 @@
                               <Group fx:id="volumeGroup" onMouseEntered="#onMouseEnterVolume" onMouseExited="#onMouseExitVolume">
                                  <children>
                                     <Button fx:id="btnVolume" mnemonicParsing="false" onAction="#onVolumeClicked" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER" />
-                                    <Slider fx:id="volumeSlider" blockIncrement="0.0" layoutX="40.0" layoutY="11.333333969116211" max="1.0" prefHeight="17.0" prefWidth="70.0" value="0.5" />
+                                    <Slider fx:id="volumeSlider" blockIncrement="1.0" layoutX="40.0" layoutY="11.333333969116211" max="200.0" prefHeight="17.0" prefWidth="70.0" value="100.0" />
                                  </children>
                                  <HBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
