Change the way the icon font is loaded and set to make it easier
The font is now loaded once with a default size (12) and then can be set using the icon css class, which also removes extra padding. This means it can be set from Scene Builder rather than having to be done programmatically which was tedious. (The text still has to be set programmatically.) The font can also be set using the getIconFont method if it makes more sense to be set programmatically. This method does not remove extra padding however.

Updated everwhere the icons are used to use the new way.

--- a/src/main/resources/new_video_dialog.fxml
+++ b/src/main/resources/new_video_dialog.fxml
@@ -38,7 +38,10 @@
                   <Insets right="10.0" />
                </padding>
             </HBox>
-            <Button fx:id="btnChooseVideo" mnemonicParsing="false" onAction="#ChooseVideo" GridPane.columnIndex="2" />
+            <Button fx:id="btnChooseVideo" mnemonicParsing="false" onAction="#ChooseVideo" style="-fx-font-size: 18;" styleClass="icon" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Arial" size="12.0" />
+               </font></Button>
             <HBox alignment="CENTER_RIGHT" GridPane.rowIndex="1">
                <children>
                   <Label text="TITLE:" textFill="#c269bc">
@@ -65,7 +68,7 @@
                </padding>
             </HBox>
             <TextField fx:id="poster" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="btnChooseImage" mnemonicParsing="false" onAction="#ChooseImage" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="btnChooseImage" mnemonicParsing="false" onAction="#ChooseImage" style="-fx-font-size: 18;" styleClass="icon" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
          <padding>
             <Insets left="20.0" right="20.0" />
