--- a/src/main/resources/player.fxml
+++ b/src/main/resources/player.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="stack" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlayerController">
+<StackPane fx:id="stack" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" styleClass="player" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlayerController">
    <children>
       <MediaView fx:id="mediaView" />
       <ImageView fx:id="videoImageView" pickOnBounds="true" preserveRatio="true" />
@@ -36,37 +36,49 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0">
+                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="800.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="250.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Group fx:id="volumeGroup" onMouseEntered="#onMouseEnterVolume" onMouseExited="#onMouseExitVolume">
                                  <children>
-                                    <Button fx:id="btnVolume" mnemonicParsing="false" onAction="#onVolumeClicked" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER" />
-                                    <Slider fx:id="volumeSlider" blockIncrement="1.0" layoutX="40.0" layoutY="11.333333969116211" max="200.0" prefHeight="17.0" prefWidth="70.0" value="100.0" />
+                                    <Button fx:id="btnVolume" mnemonicParsing="false" onAction="#onVolumeClicked" prefHeight="25.0" prefWidth="25.0" style="-fx-font-size: 20;" styleClass="icon" textAlignment="CENTER" />
+                                    <Slider fx:id="volumeSlider" blockIncrement="1.0" layoutX="25.0" layoutY="5.0" max="200.0" prefHeight="15.0" prefWidth="70.0" value="100.0" visible="false" />
                                  </children>
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    <Insets left="20.0" right="20.0" />
                                  </HBox.margin>
                               </Group>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefWidth="250.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Button fx:id="btnBackTen" mnemonicParsing="false" onAction="#backTen" prefHeight="30.0" prefWidth="30.0" textAlignment="CENTER" />
-                              <Button fx:id="btnPause" mnemonicParsing="false" onAction="#playPause" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER">
+                              <Button fx:id="btnBackTen" mnemonicParsing="false" onAction="#backTen" prefHeight="25.0" prefWidth="25.0" styleClass="icon" textAlignment="CENTER">
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    <Insets left="10.0" right="10.0" />
+                                 </HBox.margin></Button>
+                              <Button fx:id="btnPause" mnemonicParsing="false" onAction="#playPause" prefHeight="25.0" prefWidth="25.0" styleClass="icon" text="X" textAlignment="CENTER">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="10.0" />
                                  </HBox.margin>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
                               </Button>
-                              <Button fx:id="btnForwardTen" mnemonicParsing="false" onAction="#forwardTen" prefHeight="30.0" prefWidth="30.0" textAlignment="CENTER" />
+                              <Button fx:id="btnForwardTen" mnemonicParsing="false" onAction="#forwardTen" prefHeight="25.0" prefWidth="25.0" styleClass="icon" textAlignment="CENTER">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </HBox.margin></Button>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_RIGHT" prefWidth="250.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Button fx:id="btnFullScreen" alignment="CENTER" mnemonicParsing="false" onAction="#fullscreen" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER">
+                              <Button fx:id="btnFullScreen" alignment="CENTER" mnemonicParsing="false" onAction="#fullscreen" prefHeight="25.0" prefWidth="25.0" styleClass="icon" textAlignment="CENTER">
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    <Insets left="20.0" right="20.0" />
                                  </HBox.margin>
                                  <font>
                                     <Font size="18.0" />
@@ -75,12 +87,15 @@
                            </children>
                         </HBox>
                      </children>
+                     <padding>
+                        <Insets bottom="20.0" top="20.0" />
+                     </padding>
                   </HBox>
                </children>
             </VBox>
          </bottom>
          <top>
-            <Button fx:id="btnBack" contentDisplay="TOP" mnemonicParsing="false" onAction="#exit" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER" BorderPane.alignment="TOP_LEFT">
+            <Button fx:id="btnBack" contentDisplay="TOP" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" prefWidth="25.0" styleClass="icon" textAlignment="CENTER" BorderPane.alignment="TOP_LEFT">
                <BorderPane.margin>
                   <Insets left="10.0" top="10.0" />
                </BorderPane.margin>
